Fix small css layout bug in mobile
Too much left margin on the #vendorStrip's list items was causing a small
layout bug where the right hamburger menu was accidentally hidden (mobile).

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -554,7 +554,7 @@ section
 		font-weight: bold
 
 	li + li
-		margin-left: 20px
+		margin-left: 0
 
 
 #docs
